# Janus

./: README.md  __init__.py  ai_discovery_env.py  ai_interpretability_rewards.py  base_experiment.py  checkpoint_manager.py  config_models.py  conservation_reward_fix.py  custom_exceptions.py  distributed_training.py  enhanced_feedback.py  example_training_run.jsonl  experiment_runner.py  fast_phase1_test.py  feedback_integration.py  hypothesis_policy_network.py  integrated_pipeline.py  janus_ai_interpretability.py  janus_emergent_monitor.py  janus_integrated_pipeline.py  janus_multiagent_selfplay.py  launch_advanced_training.py  live_monitor.py  live_monitor_fix.py  maml-training-framework.py  maml_training_framework.py  math_utils.py  meta-learning-analysis.py  meta-physics-discovery.py  multiagent_selfplay.py  optimized_candidate_generation.py  physics_discovery_extensions.py  physics_task_distribution.py  progressive_grammar_system.py  pyproject.toml  requirements-dev.txt  requirements.txt  robust_hypothesis_extraction.py  run_phase1_experiments.py  setup.cfg  (+6 more)
config/: default.yaml
deprecated/: meta-physics-discovery.py
janus/: __main__.py
janus/ai_interpretability/: __init__.py
janus/ai_interpretability/environments/: __init__.py  base_ai_env.py  base_symbolic_env.py  cnn_env.py  neural_net_env.py
janus/ai_interpretability/grammars/: neural_grammar.py
janus/ai_interpretability/interpreters/: base_interpreter.py
janus/ai_interpretability/rewards/: fidelity_reward.py  interpretability_reward.py
janus/ai_interpretability/utils/: __init__.py  math_utils.py
janus/cli/: main.py
janus/cli/commands/: discover.py  evaluate.py  train.py
janus/core/: expression.py
janus/experiments/: base.py  registry.py
janus/experiments/ai/: gpt2_attention.py
tests/: conftest.py  test_config_models.py  test_critical_fixes.py  test_enhanced_feedback.py  test_experiment_runner.py  test_hypothesis_policy_network.py  test_integrated_pipeline_enhanced.py  test_maml_training_framework.py  test_physics_discovery_extensions.py  test_progressive_grammar.py  test_symbolic_discovery_env.py  test_utils.py
