[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janus"
version = "0.1.0"
description = "Janus: Autonomous Physics Discovery System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Janus Team", email = "team@janus.ai"}
]
maintainers = [
    {name = "Janus Team", email = "team@janus.ai"}
]
keywords = [
    "physics discovery",
    "symbolic regression",
    "reinforcement learning",
    "scientific computing",
    "automated discovery"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "sympy>=1.9",
    "torch>=2.0.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
    "wandb>=0.15.0",
    "ray[default]>=2.0.0",
    "matplotlib>=3.5.0",
    "networkx>=2.6",
    "pandas>=1.3.0",
    "tqdm>=4.62.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "pre-commit>=2.20.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0"
]

[project.urls]
Homepage = "https://github.com/janus-team/janus"
Documentation = "https://janus.readthedocs.io"
Repository = "https://github.com/janus-team/janus"
Issues = "https://github.com/janus-team/janus/issues"

[project.scripts]
janus = "janus.cli:main"
janus-train = "janus.train:main"
janus-evaluate = "janus.evaluate:main"

[tool.setuptools]
packages = ["janus"]
include-package-data = true

[tool.setuptools.package-data]
janus = ["config/*.yaml", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\\.pyi?$' # Escaped backslash for the subtask

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
