[metadata]
name = janus
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A short description of the Janus project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/janus  # Replace with actual URL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    # Add any dependencies here, e.g.:
    # numpy>=1.0
    # pandas>=1.0

[options.packages.find]
where = .
